log/build_2021-05-31_13-36-17/gazebo_plugin_sim/stdout_stderr.log
[35m[1mScanning dependencies of target platform_plugin_test[0m
[ 50%] [32mBuilding CXX object CMakeFiles/platform_plugin_test.dir/src/platform_plugin_test.cpp.o[0m
In file included from /opt/ros/foxy/include/gazebo_ros/conversions/generic.hpp:25,
                 from /opt/ros/foxy/include/gazebo_ros/conversions/builtin_interfaces.hpp:23,
                 from /home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:7:
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp: In member function ‘void gazebo_plugin_sim::PlatformPluginTestPrivate::OnMsgVelM1(geometry_msgs::msg::Twist_<std::allocator<void> >::SharedPtr)’:
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:86:15: error: ‘impl_’ was not declared in this scope; did you mean ‘mpl_’?
   86 |   RCLCPP_INFO(impl_->ros_node_->get_logger(), "HOLA");
      |               ^~~~~
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:86:3: error: template argument 1 is invalid
   86 |   RCLCPP_INFO(impl_->ros_node_->get_logger(), "HOLA");
      |   ^~~~~~~~~~~
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:86:3: error: template argument 1 is invalid
   86 |   RCLCPP_INFO(impl_->ros_node_->get_logger(), "HOLA");
      |   ^~~~~~~~~~~
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:86:3: error: template argument 1 is invalid
   86 |   RCLCPP_INFO(impl_->ros_node_->get_logger(), "HOLA");
      |   ^~~~~~~~~~~
At global scope:
cc1plus: warning: unrecognized command line option ‘-Wno-inconsistent-missing-override’
make[2]: *** [CMakeFiles/platform_plugin_test.dir/build.make:63: CMakeFiles/platform_plugin_test.dir/src/platform_plugin_test.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/platform_plugin_test.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
